Make changes in templates, urls and views (3.11)

--- a/task_api/company/templates/company/department_info.html
+++ b/task_api/company/templates/company/department_info.html
@@ -6,12 +6,14 @@
 </head>
 <body>
     Department data:
-    <ul>
-    {% for key_value in department_info %}
-        <li>
-            {{ key_value }}
+        <li>id: {{ department.id }}</li>
+        <li>name: {{ department.name }}</li>
+        <li>create_date: {{ department.create_date }}</li>
+        <li>employees in '{{ department.name }}':
+            [{% for employee in department.employee_set.all %}
+                {{ employee.name }}]
+            {% endfor %}
         </li>
-    {% endfor %}
-    </ul>
+
 </body>
 </html>
