--- a/task_api/company/templates/company/index.html
+++ b/task_api/company/templates/company/index.html
@@ -9,8 +9,8 @@
 
     Company consists of:
         <li><a href="{% url 'company:deps' %}">Departments</a></li>
-        <li><a href="employee/">Employees</a></li>
-        <li><a href="project/">Projects</a></li>
+        <li><a href="{% url 'company:empls' %}">Employees</a></li>
+        <li><a href="{% url 'company:projs' %}">Projects</a></li>
 
 
 </body>
