Create department implement with generic.CreateView

--- a/task_api/company/templates/company/base.html
+++ b/task_api/company/templates/company/base.html
@@ -23,7 +23,7 @@
               <a class="nav-link" href="{% url 'company:projs' %}">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'company:create_dep' %}">New_department</a>
+              <a class="nav-link" href="{% url 'company:create_new_dep' %}">New_department</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'company:projs' %}">New_employee</a>
