--- a/task_api/company/templates/company/create_new_department.html
+++ b/task_api/company/templates/company/create_new_department.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "company/base.html" %}
+{% load widget_tweaks %}
+
+{% block title %}
+    Create department:
+{% endblock %}
+
+{% block content %}
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Save">
+    </form>
+{% endblock %}
+
