Create templates for dep. add, create, update + navbars (list & info)

--- a/task_api/company/templates/company/create_employee.html
+++ b/task_api/company/templates/company/create_employee.html
@@ -1,8 +1,7 @@
 {% extends "company/base.html" %}
-{% load widget_tweaks %}
 
 {% block title %}
-    Create department:
+    Create employee:
 {% endblock %}
 
 {% block content %}
@@ -12,4 +11,3 @@
         <input type="submit" value="Save">
     </form>
 {% endblock %}
-
