--- a/task_api/company/templates/company/employee_info.html
+++ b/task_api/company/templates/company/employee_info.html
@@ -9,7 +9,8 @@
         <li>name: {{ employee.name }}</li>
         <li>surname: {{ employee.surname }}</li>
         <li>login: {{ employee.login }}</li>
-        <li>create_date: {{ employee.create_date }}</li>
+<!--        <li>password: {{ employee.password }}</li>-->
+        <li>e-mail: {{ employee.email }}</li>
         <li>role: {{ employee.employee_role }}</li>
         <li>salary: {{ employee.salary }}</li>
         <li>department:
