--- a/task_api/company/templates/company/index.html
+++ b/task_api/company/templates/company/index.html
@@ -1,8 +1,7 @@
 {% extends "company/base.html" %}
 
 {% block title %}
-    Hi there! This is company's main page :)
-    <br>Company consists of:
+    Company consists of:
 {% endblock %}
 
 {% block content %}
