--- a/task_api/company/templates/company/navbar_list.html
+++ b/task_api/company/templates/company/navbar_list.html
@@ -9,9 +9,10 @@
 <body>
 <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
     <div class="container">
-        <a href="../" class="navbar-brand"><strong>Main</strong></a>
+        <a href="/" class="navbar-brand"><strong>Main</strong></a>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ms-md-auto">
+
+          <ul class="navbar-nav ms-md-0">
             <li class="nav-item">
               <a class="nav-link" href="{% url 'company:deps' %}"><strong>Departments</strong></a>
             </li>
@@ -21,19 +22,18 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'company:projs' %}"><strong>Projects</strong></a>
             </li>
+          </ul>
+
+          <ul class="navbar-nav ms-md-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'company:create_dep' %}">New_department</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'company:create_empl' %}">New_employee</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'company:create_proj' %}">New_project</a>
+              <a class="nav-link" href="{% url 'company:create_dep' %}">Add_new</a>
             </li>
           </ul>
+
         </div>
     </div>
 </div>
+
 <h4>{% block title %}
 {% endblock %}</h4>
 
