--- a/task_api/company/templates/company/login.html
+++ b/task_api/company/templates/company/login.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "company/base.html" %}
+
+{% block title %}
+    Login page:
+{% endblock %}
+
+{% block content %}
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Login">
+        <a class="btn btn-default" href="/">Cancel</a>
+    </form>
+{% endblock %}
