--- a/task_api/company/templates/company/navbar_list.html
+++ b/task_api/company/templates/company/navbar_list.html
@@ -27,15 +27,17 @@
             </li>
           </ul>
 
+          {% if request.user.is_authenticated %}
           <ul class="navbar-nav ms-md-auto">
-              <li>
-                  <a class="nav-link" href="{% url 'company:login' %}">Login</a>
-              </li>
-              |
-              <li>
-                  <a class="nav-link" href="{% url 'company:register' %}">Register</a>
-              </li>
+              <li><a class="nav-link">{{ user.username }}</a></li>|
+              <li><a class="nav-link" href="{% url 'company:logout' %}">Logout</a></li>
           </ul>
+          {% else %}
+          <ul class="navbar-nav ms-md-auto">
+              <li><a class="nav-link" href="{% url 'company:login' %}">Login</a></li>|
+              <li><a class="nav-link" href="{% url 'company:register' %}">Register</a></li>
+          </ul>
+          {% endif %}
 
         </div>
     </div>
