Refactor + Play with navbars

--- a/task_api/company/templates/company/employee_info.html
+++ b/task_api/company/templates/company/employee_info.html
@@ -23,4 +23,8 @@
                 <a href="{% url 'company:proj_by_id' project.id %}">{{ project.name }} ({{ project.id }})</a>,
             {% endfor %}]
         </li>
+        <li>employee photo:
+            {% load static %}
+            <img src="{% static 'company/user.png' %}" width=100px alt="Employee photo">
+        </li>
 {% endblock %}
